--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "devDependencies": {
-    "shadow-cljs": "2.16.12"
+    "shadow-cljs": "2.16.12",
+    "source-map-support": "^0.5.21"
   }
 }
