--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@js-joda/core": "3.2.0",
     "@js-joda/locale_en-us": "3.1.1",
     "@js-joda/timezone": "2.5.0",
+    "cli-color": "^2.0.1",
     "xmlhttprequest": "^1.8.0"
   }
 }
